# spotify-api-project

./: README.md  application.py  commented.txt  pyproject.toml  scopes.txt  server.js
getRequestJSONSamples/: songsJSON.json
postRequestJSONSamples/: createPlaylistJSON.json
