[tool.poetry]
name = "spotifyproject"
version = "0.1.0"
description = ""
authors = ["Travis <trecupe1@binghamton.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.19.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
